# Monopoli

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake
include/: Casella.h  GameTable.h  HumanPlayer.h  Player.h  RobotPlayer.h
source/: HumanPlayer.cpp  Player.cpp  main
src/: Casella.cpp  GameTable.cpp  HumanPlayer.cpp  Player.cpp  RobotPlayer.cpp  main.cpp
